make slf4j use tomcat logger for its backend